Some database configuration changes. I hate not setting configuration at runtime- 3 minute rebuild for config changes feels terrible. Added a sqlite database to store the callbacks in in case we need to access them in the future. This can also potentially be used for basic user authentication similar to the rosters.lowbudgetlcs.com repo. Added a TournamentEngine template. This repo will soon need a compose.yaml file as it gains complexity.

--- a/src/main/resources/database-example.yaml
+++ b/src/main/resources/database-example.yaml
@@ -1,5 +1,5 @@
-databases:
-    lblcs:
-        name:
-        url:
-        password:
+lblcs:
+    url: jdbc:postgresql://XYZ
+    password: XYZ
+local:
+    url: jdbc:sqlite:XYZ
