--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -68,9 +68,10 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script: |
             cd docker/lblcs/${{ env.APP }}
-            echo LBLCS_DB_URL="${{ secrets.POSTGRES_URL }}" > .env
-            echo LBLCS_DB_PW="${{ secrets.POSTGRES_DB_PW }}" >> .env
+            echo LBLCS_DB_URL="${{ secrets.LBLCS_DB_URL }}" > .env
+            echo LBLCS_DB_PW="${{ secrets.LBLCS_DB_PW }}" >> .env
             echo RIOT_API_KEY="${{ secrets.RIOT_API_TOKEN }}" >> .env
             docker-compose down
             docker-compose pull
             docker-compose up -d
+            rm -f .env
