--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -74,4 +74,4 @@ jobs:
             docker-compose down
             docker-compose pull
             docker-compose up -d
-            rm -f .env
+            rm -f ./.env
