Update new config values in deploy.yaml.

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -68,8 +68,8 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script: |
             cd docker/lblcs/${{ env.APP }}
-            echo LBLCS_DB_URL="${{ secrets.LBLCS_DB_URL }}" > .env
-            echo LBLCS_DB_PW="${{ secrets.LBLCS_DB_PW }}" >> .env
+            echo LBLCS_JDBC_URL="${{ secrets.LBLCS_JDBC_URL }}" > .env
+            echo LBLCS_JDBC_PW="${{ secrets.LBLCS_JDBC_PW }}" >> .env
             echo RIOT_API_KEY="${{ secrets.RIOT_API_TOKEN }}" >> .env
             docker-compose down
             docker-compose pull
