--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -70,7 +70,7 @@ jobs:
             cd docker/lblcs/${{ env.APP }}
             echo LBLCS_JDBC_URL="${{ secrets.LBLCS_JDBC_URL }}" > .env
             echo LBLCS_JDBC_PW="${{ secrets.LBLCS_JDBC_PW }}" >> .env
-            echo RIOT_API_KEY="${{ secrets.RIOT_API_TOKEN }}" >> .env
+            echo RIOT_API_TOKEN="${{ secrets.RIOT_API_TOKEN }}" >> .env
             docker-compose down
             docker-compose pull
             docker-compose up -d
