--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-LBLCS_JDBC_URL=
-LBLCS_JDBC_PW=
+LBLCS_JDBC_URL=jdbc:postgresql://postgres-container:5432/postgres?user=postgres&prepareThreshold=0
+LBLCS_JDBC_PW=postgres
 RIOT_API_TOKEN=
