--- a/compose.yaml
+++ b/compose.yaml
@@ -9,16 +9,51 @@ services:
       - LBLCS_JDBC_URL=${LBLCS_JDBC_URL}
       - LBLCS_JDBC_PW=${LBLCS_JDBC_PW}
       - RIOT_API_TOKEN=${RIOT_API_TOKEN}
-    networks:
-      - rabbitmq.docker
+    depends_on:
+      postgres:
+        condition: service_healthy
+      rabbitmq:
+        condition: service_healthy
+
   rabbitmq:
     image: rabbitmq:3.13.4
-    container_name: rabbitmq
+    container_name: rabbitmq-dennys
     ports:
       - "5672:5672"
-    networks:
-      - rabbitmq.docker
+    healthcheck:
+      test: rabbitmq-diagnostics -q ping
+      interval: 5s 
+      timeout: 30s
+      retries: 5
 
-networks:
-  rabbitmq.docker:
-    name: rabbitmq.docker
+  postgres:
+    image: postgres:15
+    container_name: postgres-dennys
+    ports:
+      - "5432:5432"
+    user: postgres
+    environment:
+      - POSTGRES_PASSWORD=postgres
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready", "-U", "postgres"]
+      interval: 5s 
+      timeout: 10s
+      retries: 3
+
+  pgadmin:
+    image: dpage/pgadmin4:9.0
+    container_name: pgadmin-dennys
+    ports: 
+      - "8888:80"
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=ruuffian@gmail.com
+      - PGADMIN_DEFAULT_PASSWORD=pgadmin
+      - PGADMIN_DISABLE_POSTFIX=true
+    volumes:
+      - pgadmin-data:/var/lib/pgadmin
+
+volumes:
+  pgdata:
+  pgadmin-data:
