--- a/compose.yaml
+++ b/compose.yaml
@@ -27,13 +27,13 @@ services:
       retries: 5
 
   postgres:
-    image: postgres:15
+    image: postgres:15-alpine
     container_name: postgres-dennys
     ports:
       - "5432:5432"
     user: postgres
     environment:
-      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_PASSWORD=dev-password
     volumes:
       - pgdata:/var/lib/postgresql/data
       - ./build/resources/migrations:/docker-entrypoint-initdb.d
@@ -49,8 +49,8 @@ services:
     ports: 
       - "8888:80"
     environment:
-      - PGADMIN_DEFAULT_EMAIL=ruuffian@gmail.com
-      - PGADMIN_DEFAULT_PASSWORD=pgadmin
+      - PGADMIN_DEFAULT_EMAIL=lblcs.dev@gmail.com
+      - PGADMIN_DEFAULT_PASSWORD=pgadmin-dev
       - PGADMIN_DISABLE_POSTFIX=true
     volumes:
       - pgadmin-data:/var/lib/pgadmin
