--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-LBLCS_JDBC_URL=jdbc:postgresql://postgres:5432/postgres?user=postgres&prepareThreshold=0
+LBLCS_JDBC_URL=jdbc:postgresql://postgres-dennys:5432/postgres?user=postgres&prepareThreshold=0
 LBLCS_JDBC_PW=dev-password
 RIOT_API_TOKEN=
