Changed log configuration. Now, we only recieve INFO on the console. All DEBUG logs go to a file in ./logs. Added bind mount in compose file to save logs to disk, and updated compose file for the new remote infra with /lblcs. Added failure  logging to StatDaemon when database operations have expected failures.

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -67,7 +67,7 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_KEY }}
           script: |
-            cd docker/lblcs/${{ env.APP }}
+            cd /lblcs/docker/${{ env.APP }}
             echo LBLCS_JDBC_URL="${{ secrets.LBLCS_JDBC_URL }}" > .env
             echo LBLCS_JDBC_PW="${{ secrets.LBLCS_JDBC_PW }}" >> .env
             echo RIOT_API_TOKEN="${{ secrets.RIOT_API_TOKEN }}" >> .env
