Changes are as follows: 1) Formatting changes in Team and Game repositories. One data class name    changed. 2) Removed useless 'touch' in deploy.yaml. This workflow is going to be    fixed in a future commit- we DON'T need a copy-paste deploy workflow    for every service. Every service is different, thus needs different    deployment steps. OBVIOUSLY. 3) Added new environment variable 'useStubs'. Currently unused but will    be useful when we begin testing tournament code creation. 4) Simplified the app config. Everything lives in 1 file    (config.properties) and uses Prefix Binding to bind data. For    example:    foo.a=1    bar.b=fun    Corresponds to classes:    data class Foo(val a: Integer)    data class Bar(val b: String)    This way, we read our file once and bind afterwards. I think there's    some more stuff to do here (injecting a bindOrThrow<>() is pretty    ugly) but I'm happy with this for now. 5) Changed the file structure for API Routes. We invoke sub-routes in    the Root.kt file. 6) Renamed the TournamentEngine and StatDaemon to TournamentService and    StatService. More to come here.
These changes were tested locally.

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 LBLCS_JDBC_URL=jdbc:postgresql://postgres-dennys:5432/postgres?user=postgres&prepareThreshold=0
 LBLCS_JDBC_PW=dev-password
 RIOT_API_TOKEN=
+RIOT_USE_STUBS=True
