--- a/.dockerignore
+++ b/.dockerignore
@@ -6,9 +6,14 @@ build/
 .kotlin
 .env*
 gradlew.bat
+gradlew
+logs/
+gradle/
 
 *.iml
 Makefile
 README.md
+LICENSE.txt
 compose.yaml
 shell.nix
+VERSION
