--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Build the Docker image
         run: |
-          docker build . --file Dockerfile --tag ${{ env.APP }}:latest
+          docker buildx build . --platform linux/amd64,linux/arm64 --file Dockerfile --tag ${{ env.APP }}:latest
           docker tag ${{ env.APP }}:latest lblcs/${{ env.APP }}:latest
           docker tag ${{ env.APP }}:latest lblcs/${{ env.APP }}:${{ env.VERSION }}
 
