--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -31,22 +31,24 @@ jobs:
 
       - uses: actions/checkout@v4
 
-      - name: Build configuration files
-        run: |
-          touch src/main/resources/database.yaml
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PAT }}
 
-      - name: Build the Docker image
-        run: |
-          docker buildx build . --platform linux/amd64,linux/arm64 --file Dockerfile --tag ${{ env.APP }}:latest
-          docker tag ${{ env.APP }}:latest lblcs/${{ env.APP }}:latest
-          docker tag ${{ env.APP }}:latest lblcs/${{ env.APP }}:${{ env.VERSION }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
-      - name: Push Docker Image
-        run: |
-          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PAT }}
-          docker push lblcs/${{ env.APP }}:${{ env.VERSION }}
-          docker push lblcs/${{ env.APP }}:latest
-          docker logout
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        with:
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: lblcs/${{ env.APP }}:latest
 
   deploy:
     needs: build
