--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,7 +15,7 @@ jobs:
     uses: ./.github/workflows/build-env.yaml
 
   build:
-    runs-on: samantha
+    runs-on: macos-latest
     needs: env
     steps:
       - name: Download env artifact
@@ -49,7 +49,7 @@ jobs:
 
   deploy:
     needs: build
-    runs-on: samantha
+    runs-on: ubuntu-latest
     steps:
       - name: Download env artifact
         uses: actions/download-artifact@v4
@@ -64,7 +64,13 @@ jobs:
           done <<< $( cat .env.art)
 
       - name: Execute docker compose on prod server
-        run: |
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          port: ${{ secrets.SSH_PORT }}
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_KEY }}
+          script: |
             cd /lblcs/docker/${{ env.APP }}
             echo LBLCS_JDBC_URL="${{ secrets.LBLCS_JDBC_URL }}" > .env
             echo LBLCS_JDBC_PW="${{ secrets.LBLCS_JDBC_PW }}" >> .env
