--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -31,7 +31,10 @@ jobs:
           done <<< $(cat .env.art)
 
       - uses: actions/checkout@v4
-
+      
+      - run: |
+          security -v unlock-keychain ~/Library/Keychains/login.keychain-db
+          
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
