--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,7 +15,7 @@ jobs:
     uses: ./.github/workflows/build-env.yaml
 
   build:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     needs: env
     steps:
       - name: Download env artifact
@@ -31,15 +31,15 @@ jobs:
           done <<< $(cat .env.art)
 
       - uses: actions/checkout@v4
-      
-      - run: |
-          security -v unlock-keychain ~/Library/Keychains/login.keychain-db
-          
+                
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PAT }}
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -47,6 +47,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
+          platforms: linux/arm64
           push: true
           tags: lblcs/${{ env.APP }}:latest
 
