1) Added dennys:test to cleanup command in Makefile 2) Moved all docker related files to docker/ directory. 3) Moved migration output to docker/postgres/. 4) Removed login screen from pgAdmin instance, and set default password    for quicker development. Note that these docker containers do NOT bind    to 0.0.0.0, so this is not exposed to the internet. 5) Updated README with new Make commands and clearer setup instructions.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -12,7 +12,8 @@ RUN gradle --no-daemon installDist
 
 FROM gradle:8.9-jdk17 AS test
 WORKDIR /test
-COPY build.gradle.kts settings.gradle.kts gradle.properties ./
+COPY --from=dependencies /cache /home/gradle/.gradle
+COPY . .
 RUN gradle test
 
 FROM amazoncorretto:17-alpine AS app
