Rewrote repositories to use Jooq + DSL, put Jooq-specific repos in repositories.jooq. If we end up with repo interfaces, those will go in the top level of the repositories package, with each implementation having a sub-package. The RiotAPICLient (and co) still needs a home. Added a basic integration test that I HOPE will work once the application compiles (services package :-/).

--- a/compose.yml
+++ b/compose.yml
@@ -43,7 +43,7 @@ services:
     ports: 
       - "127.0.0.1:8888:80"
     environment:
-      - PGADMIN_DEFAULT_EMAIL=admin
+      - PGADMIN_DEFAULT_EMAIL=admin@dev.com
       - PGADMIN_DEFAULT_PASSWORD=admin
       - PGADMIN_CONFIG_SERVER_MODE=False
       - PGADMIN_CONFIG_MASTER_PASSWORD=False
