Ok, I was wrong. Generated code DOES belong in VC. I don't want to generate new db code in build pipelines and discover weird bugs that late.
Bumped Jooq version

Created JooqGameRepository

Added integration tests to test task

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -14,7 +14,7 @@ FROM gradle:8.9-jdk17 AS test
 WORKDIR /test
 COPY --from=dependencies /cache /home/gradle/.gradle
 COPY . .
-RUN gradle test
+RUN gradle test itest
 
 FROM amazoncorretto:17-alpine AS app
 WORKDIR /app
