1) Bumped ktor version 2) Correctly separated API routes into separate files using extension    functions on Route instead of Application 3) Moved riot callback route to /api/v1 for consistency 4) Fixed broken softlink in docker/postgres
Some minor schema changes are coming, followed by MANY more api
endpoints. WOOOOO!

--- a/compose.yml
+++ b/compose.yml
@@ -30,7 +30,7 @@ services:
       - POSTGRES_PASSWORD=admin
     volumes:
       # DB Init Scripts
-      - ./docker/postgres/migrations:/docker-entrypoint-initdb.d
+      - ./docker/postgres/sql:/docker-entrypoint-initdb.d
     healthcheck:
       test: ["CMD-SHELL", "pg_isready", "-U", "postgres"]
       interval: 5s 
