Moved dto/ classes under routes/ package- they are only meant for the data layer, so they should be grouped with them. Got swagger UI workin! http://localhost:9292/swagger will bring up the API docs and allow developers to explore the API :-). Also added a GET endpoint on /v1/event to furhter my understanding of Swagger Editor. I think authentication makes sense to start soon- the later that starts, the more annoying it is to implement.

--- a/compose.yml
+++ b/compose.yml
@@ -54,3 +54,14 @@ services:
     volumes:
       # Add default database configuration
       - ./docker/pgAdmin/servers.json:/pgadmin4/servers.json
+
+  swagger-editor:
+    container_name: swagger
+    image: swaggerapi/swagger-editor
+    ports: 
+      - "80:8080"
+    volumes:
+      - ./docker/swaggerEditor/openapi.yaml:/spec/openapi.yaml
+    environment:
+      SWAGGER_FILE: /spec/openapi.yaml
+
