env example, open api docs, and optional nullable fields update

--- a/src/main/resources/openapi/documentation.yaml
+++ b/src/main/resources/openapi/documentation.yaml
@@ -151,7 +151,7 @@ components:
         - ACTIVE
         - CANCELED
         - PAUSED
-        - COMPLETE
+        - COMPLETED
         
     CreateEventDto:
       type: object
