--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-LBLCS_JDBC_URL=jdbc:postgresql://postgres-dennys:5432/postgres?user=postgres&prepareThreshold=0
-LBLCS_JDBC_PW=dev-password
+LBLCS_JDBC_URL=jdbc:postgresql://db:5432/postgres?user=postgres&prepareThreshold=0
+LBLCS_JDBC_PW=admin
 RIOT_API_TOKEN=
 RIOT_USE_STUBS=True
