--- a/src/main/resources/openapi/documentation.yaml
+++ b/src/main/resources/openapi/documentation.yaml
@@ -120,7 +120,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 
-    put:
+    patch:
       tags:
         - v1/event
       summary: Update an event (not including team management).
@@ -308,7 +308,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-    put:
+    patch:
       summary: Rename a player
       operationId: renamePlayer
       tags:
@@ -509,7 +509,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-    put:
+    patch:
       summary: Update a team (not including player/event management)
       operationId: updateTeam
       tags:
